--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-plausible": "^3.12.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
